tests/ui/borrowck/do-not-suggest-duplicate-semicolons-issue-133941.stderr
error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/do-not-suggest-duplicate-semicolons-issue-133941.rs:27:9
   |
LL |     while let Some(_) = foo.f() {
   |                         -------
   |                         |
   |                         first mutable borrow occurs here
   |                         a temporary with access to the first borrow is created here ...
...
LL |         foo.g();
   |         ^^^ second mutable borrow occurs here
LL |
LL |     };
   |     - ... and the first borrow might be used here, when that temporary is dropped and runs the destructor for type `Option<Bar<'_>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
